--- a/platforms/ios/www/templates/login.html
+++ b/platforms/ios/www/templates/login.html
@@ -1,14 +1,13 @@
 <div id="login">
-    <div id="login-content">
-        <div id="login-back">Back</div>
-        <div id="logo"></div>
+    <section id="login-section">
         <form id="user-login" method="post">
             <input class="login-text" id="username" type="text" placeholder="Email" name="username" autocapitalize="off" autocorrect="off" autocomplete="off"/>
             <input class="login-text" id="password" type="password" placeholder="Password" name="password" autocapitalize="off" autocorrect="off" autocomplete="off" />
-            <input id="login-button" type="submit" name="action" value="login" />
         </form>
         <div id="forgot-password">Forgot your password?</div>
         <div id="create-account">Don't have an account? <span>Sign up</span></div>
-    </div>
+    </section>
+    <section id="register-section">
+        
+    </section>
 </div>
-<div id="pop-up-wrapper"><div id="pop-up" class="pop-up-content"></div></div>
