--- a/platforms/ios/www/templates/listSummary.html
+++ b/platforms/ios/www/templates/listSummary.html
@@ -39,7 +39,7 @@ var terms = [{
                 <div class="share-buttons">
                     <div id="fb" class="btn" data-service="Facebook"></div>
                     <div id="twitter" class="btn" data-service="Twitter"></div>
-                    <div id="email" class="btn" data-service="Email"></div>
+                    <div id="email-share" class="btn" data-service="Email"></div>
                     <div id="sms" class="btn" data-service="SMS"></div>
                 </div>
                 <% var i = 0; _.each(movies, function(movie) { i++; %>
