--- a/platforms/ios/www/templates/coach.html
+++ b/platforms/ios/www/templates/coach.html
@@ -2,7 +2,7 @@
  
 	var text = {
 		categorySelect : {
-			text :  "Looking for new TV shows, movies and music? Wonder who shares your taste?<br /><br />Tell us what you love and we’ll connect you.",
+			text :  "Lets start by getting to know you a bit.<br /><br />Select a pack to start building your Fabric.",
 			classes : 'category-select',
 			arrow : false,
 		}, 
@@ -17,12 +17,12 @@
 			arrow : "&uarr;",
 		},
 		feed : {
-			text : "Follow people with similar taste to add their activity to your feed",
+			text : "Picks are based on what you and your tastemates are into.<br /><br />If you like someone's taste, follow them!",
 			classes : 'feed',
 			arrow : "&#8624;",
 		},
 		wantTo : {
-			text : "Your Want-To list saves everything you want to do",
+			text : "Great start!<br /><br />Here are your first daily picks of entertainment to check out.",
 			classes : 'want-to',
 			arrow : "&#8595;",
 		},
