--- a/platforms/ios/www/templates/searchStatusUpdate.html
+++ b/platforms/ios/www/templates/searchStatusUpdate.html
@@ -1,4 +1,4 @@
-<h1 id='mcdonalds'>What are you loving today?</h1>
+<h1 id='mcdonalds'>Post or ask for a recommendation</h1>
 <form id="status-update-search">
 	<input id='status-update-input' type='text' placeholder='Pick a movie, TV show, song etc' />
 </form>
